--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "generate-icons": "node scripts/generate-icons.js"
+    "deploy:firebase": "pnpm build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -34,7 +34,6 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "shadcn": "^3.8.4",
-    "sharp": "^0.33.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
